cont-stack: Layer 3 decided — the fresh stack is a 1 GB platform thread on every JDK (virtual road 15-20x slower a level, same JDK 26: 0.19-0.26 vs 0.010-0.016 us), the JVM reads its stack pointer through FFM only when native access is enabled and counts from ThreadStackSize otherwise, every read at exhaustion and none on the hot path; StackWalker refuted (7 us before the first frame, frames are not bytes); the maximum kept is bytes a level, not depth
Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01XyJb5emMoPWpsJAEFDoBos